:collision: add angular template config :collision:

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <hello-angular>Loading...</hello-angular>
+    <app-root>Loading...</app-root>
     <%= yield %>
   </body>
 </html>
