--- a/app/javascript/angular/app/app.component.html
+++ b/app/javascript/angular/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>Hello {{name}}</h1>
-<app-reviews></app-reviews>
+<layout-header></layout-header>
+
+<div class="container">
+  <app-reviews></app-reviews>
+</div>
+
+<layout-footer></layout-footer>
