--- a/app/javascript/angular/app/reviews/reviews.component.html
+++ b/app/javascript/angular/app/reviews/reviews.component.html
@@ -1,1 +1,6 @@
-<h1>This is a review page</h1>
+<h1>Reviews</h1>
+
+<div class="form-group">
+  Hello {{name}}
+  <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
+</div>
