--- a/app/javascript/angular/app/reviews/reviews.component.html
+++ b/app/javascript/angular/app/reviews/reviews.component.html
@@ -1,5 +1,6 @@
 <h1>Reviews</h1>
 
 <div class="form-group">
-  <input type="text" class="form-control" />
+  Hello {{name}}
+  <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
 </div>
