--- a/web/src/app/reviews/reviews.component.html
+++ b/web/src/app/reviews/reviews.component.html
@@ -1,6 +1,8 @@
-<h1>Reviews</h1>
+<div class="main">
+  <h1>Reviews</h1>
 
-<div class="form-group">
-  Hello {{name}}
-  <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
+  <div class="form-group">
+    Hello {{ data.a }}
+    <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
+  </div>
 </div>
