--- a/web/src/app/shared/layout/footer.component.html
+++ b/web/src/app/shared/layout/footer.component.html
@@ -1,3 +1,4 @@
-<div class="container">
-  <h1>This is a Footer</h1>
+<div class="footer">
+  <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+  <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
 </div>
