implement api get company

--- a/web/src/app/reviews/reviews.component.html
+++ b/web/src/app/reviews/reviews.component.html
@@ -2,7 +2,9 @@
   <h1>Reviews</h1>
 
   <div class="form-group">
-    Hello {{ data.a }}
+    <div *ngFor="let company of companies">
+      {{ company.name }}
+    </div>
     <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
   </div>
 </div>
