--- a/web/src/app/reviews/reviews.component.html
+++ b/web/src/app/reviews/reviews.component.html
@@ -1,10 +1,10 @@
 <div class="main">
   <h1>Reviews</h1>
 
+  <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
   <div class="form-group">
-    <div *ngFor="let company of companies">
-      {{ company.name }}
+    <div *ngFor="let comment of comments">
+      {{ comment.message }}
     </div>
-    <input type="text" class="form-control" placeholder="Tim lang cua tui"/>
   </div>
 </div>
